--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,6 +1,7 @@
 .banner {
+    position: relative;
+
     img {
-        position: relative;
         width: 100%;
         height: 650px;
         object-fit: cover;
@@ -8,14 +9,23 @@
     }
     .banner-content {
         position: absolute;
-        top: 30%;
-        h1 {
-            font-size: 3rem;
-            color: #fff;
+        top: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        .banner-content-text {
+            h1 {
+                font-size: 2rem;
+                color: #fff;
+            }
+            p {
+                font-size: 1rem;
+                color: #000;
+            }
         }
-        p {
-            font-size: 1rem;
-            color: #000;
+        .banner-content-btn {
+
         }
     }
 }
