--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,5 +1,8 @@
 .banner {
   position: relative;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 100px;
 }
 .banner img {
   width: 100%;
@@ -15,6 +18,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  gap: 100px;
 }
 .banner .banner-content .banner-content-text h1 {
   font-size: 2rem;
@@ -23,4 +27,15 @@
 .banner .banner-content .banner-content-text p {
   font-size: 1rem;
   color: #000;
+}
+.banner .banner-content .banner-content-btn .search-btn {
+  padding: 21px 55px;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+  font-family: "Raleway";
+  font-size: 1rem;
+  font-weight: 900;
 }/*# sourceMappingURL=banner.css.map */
