--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,6 +1,9 @@
 .banner {
     position: relative;
-
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+    // gap: 100px;
     img {
         width: 100%;
         height: 650px;
@@ -14,6 +17,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        gap: 100px;
         .banner-content-text {
             h1 {
                 font-size: 2rem;
@@ -25,7 +29,17 @@
             }
         }
         .banner-content-btn {
-
+            .search-btn {
+                padding: 21px 55px;
+                border: 1px solid #fff;
+                border-radius: 50px;
+                color: #fff;
+                background-color: rgba($color: #000000, $alpha: 0.0);
+                cursor: pointer;
+                font-family: 'Raleway';
+                font-size: 1rem;
+                font-weight: 900;
+            }
         }
     }
 }
