--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,7 @@
 
 .container {
-    max-width: 1110px;
+    max-width: 1130px;
+    padding: 0 10px;
     margin: 0 auto;
     .header-content {
         display: flex;
