--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,8 @@
 @import url(../components/header/header.css);
 @import url(../components/banner/banner.css);
+@import url(../components/cards/cards.css);
+@import url(../components/footer/footer.css);
+@import url(../components/popular/popular.css);
 
 * {
     margin: 0;
@@ -9,4 +12,7 @@
 body {
     font-family: 'Raleway';
     font-size: 16px;
+}
+section {
+    margin-top: 130px;
 }
