--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -33,4 +33,10 @@
 .cardsCategory .cardsCategory-content .cardCategory .cardCategory-img img {
   width: 200px;
   height: 200px;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .cardsCategory .cardsCategory-content {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }/*# sourceMappingURL=cards.css.map */
