--- a/src/components/popular/popular.scss
+++ b/src/components/popular/popular.scss
@@ -7,6 +7,11 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        .popular-card-img {
+            img {
+                border-radius: 8px;
+            }
+        }
         .popular-card-star {
             display: flex;
             flex-direction: row;
@@ -25,5 +30,34 @@
                 }
             }
         }
+        .popular-card-button {
+            display: flex;
+            justify-content: center;
+            .btn-popular {
+                padding: 12px 19px;
+                border: 1px solid #0066CC;
+                border-radius: 50px;
+                color: #0066CC;
+                background-color: rgba($color: #000000, $alpha: 0.0);
+                cursor: pointer;
+                font-family: 'Raleway';
+                font-size: 1rem;
+                font-weight: 900;
+            }
+
+        }
     }
 }
+.popular-card-text-content {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+@media screen and (min-width:769px) and (max-width:1024px) {
+    .cards-popular{
+      grid-template-columns: repeat(3,1fr);
+      gap: 30px;
+    }
+  }
